--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -29,8 +29,8 @@ body{
 
 .hidden{
     opacity: 0;
-    filter: blur(5px);
-    transition: all 1s;
+    filter: blur(10px);
+    transition: all 3s;
     /* transform: translateX(-100%); */
 }
 
@@ -42,6 +42,19 @@ body{
 }
 
 .left-to-right-show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+.right-to-left-hidden{
+    opacity: 0;
+    filter: blur(5px);
+    transition: all 1s;
+    transform: translateX(100%);
+}
+
+.right-to-left-show{
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
@@ -61,8 +74,12 @@ body{
     transform: translateY(0);
 }
 
-.gifs:nth-child(2){
+.gifs:nth-child(1){
     transition-delay: 200ms;
+}
+
+.gifs:nth-child(2){
+    transition-delay: 300ms;
 }
 
 .gifs:nth-child(3){
@@ -174,14 +191,14 @@ body{
     position: fixed;
     z-index: 1;
     transition: all 0.5s;
-    outline: 1px solid blue;
+    outline: 1px solid #f1564e;
     /* border-bottom: none; */
     margin-top: 5px;
 }
 
 .icon ion-icon{
     z-index: 10;
-    color: blue;
+    color: #f1564e;
     /* color: #5a8db5;  */
 
 }
@@ -194,7 +211,7 @@ body{
 .navigation ul li{
     list-style: none;
     position: relative;
-    width: 87px;
+    width: 90px;
     height: 60px;
     z-index: 10; 
 }
@@ -230,8 +247,8 @@ body{
     /* background: #769FCD;  */
     /* linear-gradient(90deg,#0162c8, #55e7fc);  */
 
-    color: blue;
-    border: 1px solid blue;
+    color: #f1564e;
+    border: 1px solid #f1564e;
     padding: 2px 7px;
     border-radius: 12px;
     font-weight: 600;
@@ -276,7 +293,7 @@ body{
     border-radius: 50%;
     z-index: 5; 
     transition: 0.5s;
-    border-bottom: 5px solid blue;
+    border-bottom: 5px solid #f1564e;
 }
 
 .indicator::before{
@@ -409,11 +426,9 @@ body{
 }
 
 .profile-img{
-    width: 100%;
     min-width: 270px; 
-    height: 0;
-    object-fit: cover;
-    object-position: top;
+    /* object-fit: cover; */
+    /* object-position: top; */
     border-radius: 100px;
 }
 
@@ -449,8 +464,7 @@ body{
     /* width: 1245px;  */
     margin: 0 auto;    
     overflow: auto;
-    margin-top: 100px;
-
+    margin-top: 300px;
 }
 
 .about-me-background::before{
@@ -496,7 +510,7 @@ body{
 
 .gif{
     position: relative;
-    width: 35%;
+    width: 30%;
 }
 
 .gif img{
@@ -573,7 +587,16 @@ body{
     border: none;
     font-size: 16px;
     cursor: pointer;
-    margin: 0 20px 20px 20px;
+    margin: 0 10px 20px 10px;
+    padding: 5px;
+    /* border-radius: 2px; */
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    /* box-shadow: -15px -15px 15px 
+                rgba(255, 255, 255, 0.2), 
+                15px 15px 15px rgba(0, 0, 0, 0.1); */
+    /* background: linear-gradient(90deg,#f1564e, #55e7fc);  */
+    /* color: #FFFFFF; */
+    /* background: deepskyblue; */
 }
 
 .profile-but{
@@ -703,7 +726,7 @@ span-but{
 } */
 
 .button:hover {
-    color: blue;
+    /* color: blue; */
     box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.507);
     border-radius: 7px;
 }
@@ -727,34 +750,10 @@ span-but{
   clear: both;
 }
 
-.skills-header{
-    /* width: 100%;
-    border: 1px solid black;
-    background: url('/img/bluepaint.png');
-    position: absolute;
-    top: 100; */
-}
 
-/* .paint-bg{
-    position: absolute;
-    margin-top: 800px;
-} */
-
-/* .paint-bg{
-    background: url('img/orangepaint.png');
-    position: absolute;
-    margin-top: 800px;
-} */
-
-/* .orange-paint-bg{
-    position: absolute;
-    margin-right: 300px;
-    margin-top: 100px;
-    height: 500px;
-} */
 
 .orange-paint-bg{
-    background: url('img/bluepaint.png');
+    /* background: url('img/bluepaint.png'); */
     position: absolute;
     margin-left: 900px;
     height: 400px;
@@ -777,10 +776,39 @@ span-but{
     position: absolute;
     left: -200px;
     top: -200px;
+    opacity: 0.8;
+
 }
 
-.orange-paint-bg img{
+/* .orange-paint-bg img{
     height: 400px;
+} */
+
+.red-paint-bg{
+    position: relative;
+    opacity: 0.9;
+
+}
+
+.red-paint-bg img{
+    position: absolute;
+    width: 400px;
+    right: 0;
+    opacity: 0.9;
+
+    /* transform: rotate(179deg); */
+}
+
+.red-bg{
+    transform: rotate(179deg);
+}
+
+.yellow-bg{
+    transform: rotate(13deg);
+}
+
+.skills-header{
+    margin-top: 890px;
 }
 
 .skills-title{
@@ -865,6 +893,11 @@ span-but{
     height: 100%;
     backface-visibility: hidden;
     color: #333;
+    border-radius: 15px;
+    padding-top: 5px;
+    box-shadow: -15px -15px 15px 
+                rgba(255, 255, 255, 0.2), 
+                15px 15px 15px rgba(0, 0, 0, 0.1);
 }
 
 .thefront img{
@@ -882,6 +915,10 @@ span-but{
     color: #333;
     transform: rotateY(180deg);
     overflow: hidden;
+    padding-top: 5px;
+    box-shadow: -15px -15px 15px 
+                rgba(255, 255, 255, 0.2), 
+                15px 15px 15px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -890,6 +927,10 @@ span-but{
     /* display: block; */
     width: 45%;
     text-align: center;
+}
+
+.salesforce-png{
+    padding-top: 22px;
 }
 
 .content{
@@ -904,13 +945,12 @@ span-but{
     flex-direction: column;
     transition: all 0.1s;
     border-radius: 10px;
-
+    opacity: 0.7;
 }
 
 .content p{
     color: white;
     background-color: black;
-    opacity: 0.7;
     width: 75%;
     border-radius: 1px;
     font-size: 16px;
@@ -951,9 +991,6 @@ span-but{
   padding: 2px 2px;
   width: 32%;
   height: 550px;
-  border: 5px solid green;
-
-
 }
 
 .grid-img{
@@ -1064,7 +1101,7 @@ span-but{
 
   .project-title{
     width: 100%;
-    border: 2px solid black;
+    color: #f1564e;
   }
 
   .project-box .grey-bg .project-info {
@@ -1252,6 +1289,14 @@ span-but{
         min-width: 270px;
     }
 
+    /* .container3D{
+        width: 100vw !important;
+        height: 100vh !important;
+        position: absolute; 
+        top: 0;
+        left: 0;
+    } */
+
     .bubble::after{
         border-radius: 0;
     }
@@ -1261,7 +1306,6 @@ span-but{
     .grid-item {
         width: 49%;
         /* min-width: 267px; */
-        border: 3px solid green;
     }
     .content-area{
         width: 100%;
